# git2dot

./: .gitignore  LICENSE  README.org  setup.cfg
src/git2dot/: cli.py  git2dot.py  logging_config.py  main.py
src/git2dot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test/: test-utils.sh  test01.sh  test02.sh  test03.sh  test04.sh  test05.sh  test06.sh  test07.sh  test08.sh  test09.sh  test10.sh  test_cli.py
