[metadata]
name = git2dot
version = 0.0.1
description = Visualize a git repository using graphviz dot.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jlinoff/git2dot
project_urls =
  Source = https://github.com/jlinoff/git2dot
  Tracker =  https://github.com/jlinoff/git2dot/issues

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.9
install_requires =
  python-dateutil

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  git2dot = git2dot.cli:cli

[options.extras_require]
dev =
  black
  flake8
  isort
  mypy
  pytest

[flake8]
# See: https://black.readthedocs.io/en/stable/compatible_configs.html
max-line-length = 88
extend-ignore = E203, W503

[mypy]
ignore_missing_imports = true

[isort]
# See: https://black.readthedocs.io/en/stable/compatible_configs.html
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88
